// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors stats getMessagingIntegrationsStatsFilter should return only message integrations 1`] = `
Array [
  1,
]
`;

exports[`selectors stats getStatsMessagingIntegrations should return only message integrations 1`] = `
Array [
  Object {
    "id": 1,
    "type": "gmail",
  },
]
`;

exports[`selectors stats getStatsStoreIntegrations should return only store integrations 1`] = `
Array [
  Object {
    "id": 2,
    "type": "shopify",
  },
]
`;

exports[`selectors stats getStoreIntegrationsStatsFilter should return only store integrations 1`] = `
Array [
  2,
]
`;
